--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Ejercicios para entregar/clon google.css">
+    <link rel="stylesheet" href="index.css">
     <title>Clon de google</title>
 </head>
-<body>
+
+<body class="body">
     <div class="header">
     <section>
         <p>Gmail</p>
         <p>Imágenes</p>
-        <img src="https://w7.pngwing.com/pngs/164/196/png-transparent-carme-marin-perruquers-computer-icons-menu-drop-down-list-hamburger-button-buttons-miscellaneous-angle-text.png" alt="despliegue de opciones">
+        <img src="https://w7.pngwing.com/pngs/164/196/png-transparent-carme-marin-perruquers-computer-icons-menu-drop-down-list-hamburger-button-buttons-miscellaneous-angle-text.png" class id="opciones">
     </section>
     </div>
 
@@ -45,6 +46,7 @@
         <p>México</p>
     </section>
     </div>
+</body>
 
     <div class="footer">
     <footer>
