--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="gmail">Gmail</div>
         <div class="imágenes">Imágenes</div>
         <div class="menú">
-            <img src="/Ejercicios para entregar/Clon de google/menu.png" alt="menú">
+            <img src="menu.png" alt="menú">
         </div>
         <div class="perfil">
             <img src="foto de perfil.png" alt="foto de perfil">
@@ -29,21 +29,30 @@
     <div class="búsqueda">
     <article class="buscar">
         <img src="buscar.png" alt="buscar">
+        <article class="searchinpute">
+            <input type="text" placeholder="Insertar texto">
+        </article>
     </article>
     <article class="micrófono">
         <img src="micrófono.png" alt="micrófono">
     </article>
-    <article class="cámara">
+    <span class="cámara">
         <img src="cámara.png" alt="cámara">
-    </article>
-    <article class="searchinpute">
-        <input type="text" placeholder="Insertar texto">
-    </article>
+    </span>
+
     </div>
 
     <div class="botones">
-        <button class="botón1">Buscar con google</button>
-        <button class="botón2">Voy a tener suerte</button>
+        <article class="botón1">
+        <button>
+            Buscar con google
+        </button>
+        </article>
+        <article class="botón2">
+        <button>
+            Voy a tener suerte
+        </button>
+        </article>
     </div>
 
     <div class="español">
@@ -52,20 +61,25 @@
 
     <div class="méxico">
     <section>
-        <p>México</p>
+        <article>México</article>
     </section>
     </div>
 </body>
 
-    <div class="footer">
+    <div class="pie de página">
     <footer class="footer">
-        <article class="1">Sobre Google</article>
-        <article class="2">Publicidad</article>
-        <article class="3">Negocios</article>
-        <article class="4">Cómo funciona la búsqueda</article>
-        <article class="5">Privacidad</article>
-        <article class="6">Condiciones</article>
-        <article class="7">Preferencias</article>
+        <section class="sección1">
+        <article>Sobre Google</article>
+        <article>Publicidad</article>
+        <article>Negocios</article>
+        <article>Cómo funciona la búsqueda</article>
+        </section>
+        
+        <section class="sección2">
+        <article>Privacidad</article>
+        <article>Condiciones</article>
+        <article>Preferencias</article>
+        </section>
     </footer>
 </div>
 
