--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="méxico">
-    <section>
+    <section class="texto-méxico">
         <article>México</article>
     </section>
     </div>
